--- a/views/index.html
+++ b/views/index.html
@@ -97,7 +97,7 @@
 <div class="clear"></div>
 <div class="gsjj">
     <div class="gsjj_main">
-        <div class="gsjj_main_left"><img src="/public/imgs/product/gs.jpg" width="360" height="430"></div>
+        <div class="gsjj_main_left"><img src="/public/imgs/product/gc.jpg" width="360" height="430"></div>
         <div class="gsjj_main_right"> <span>淄博景博膜结构工程有限公司</span>
             <p>  淄博景博膜结构工程有限公司是以建筑膜结构技术开发、设计、制作、施工及维护的先进技术环保企业。 淄博景博膜结构工程有限公司 优秀的设计团队，专业的技术团队，精湛的施工团队已参与完成多项国内标志性膜结构建筑。根据膜结构的建筑用途、使用环境、结构特点及建筑风格等具体情况来选择膜材和结构设计方案，重视项目设计的可操作性和细部处理，对加工做到精细再精细，对施工做到严格严谨，使每项工程都是精品中的精品。  公司秉承“以人为本、科学管理、无限创新、质量为魂、诚信是本、服务至上”的经营理念，以专业的技术，全新的思维竭诚为广大客户设计建造完美和谐的空间结构工程。 </p>
             <div class="gsjj_more"><a href="http://jbmjg.net/1/">查看更多</a></div>
@@ -109,7 +109,7 @@
     <p>携手高新技术，为您提升品质，节约成本</p>
 </div>
 <div class="news">
-    <div class="news_left"> <img src="/public/imgs/product/news.jpg"> <div class="news_left_new1"> <span><a href="http://jbmjg.net/4/20170411/25.html">选择张拉膜车棚注意事项</a></span>
+    <div class="news_left"> <img src="/public/imgs/product/news.png"> <div class="news_left_new1"> <span><a href="http://jbmjg.net/4/20170411/25.html">选择张拉膜车棚注意事项</a></span>
         <p>选择张拉膜车棚因该注意哪些事项？ 张拉膜车棚的设计主要包括体形设计、荷载分析和裁剪分析等四大问题。通过设计确定建筑形状尺寸、三维造型、净空体量并确定各控制点的坐标和...……</p>
     </div>
     </div>
@@ -117,28 +117,28 @@
         <ul>
             <li> <strong>[新闻动态]</strong>
                 <p><a href="http://jbmjg.net/4/1">选择张拉膜车棚注意事项</a></p>
-                <span>2017-04-11</span> </li>
+                <span>2018-01-15</span> </li>
             <li> <strong>[新闻动态]</strong>
                 <p><a href="http://jbmjg.net/4/2">膜结构车棚结构形式浅析</a></p>
-                <span>2017-04-11</span> </li>
+                <span>2018-01-15</span> </li>
             <li> <strong>[新闻动态]</strong>
                 <p><a href="http://jbmjg.net/4/3">膜结构施工中膜的安装要</a></p>
-                <span>2017-04-11</span> </li>
+                <span>2018-01-15</span> </li>
             <li> <strong>[新闻动态]</strong>
                 <p><a href="http://jbmjg.net/4/4">为什么膜结构建筑现在这</a></p>
-                <span>2017-04-11</span> </li>
+                <span>2018-01-15</span> </li>
             <li> <strong>[新闻动态]</strong>
                 <p><a href="http://jbmjg.net/4/5">膜结构排水要注意的问题</a></p>
-                <span>2017-04-11</span> </li>
+                <span>2018-01-15</span> </li>
             <li> <strong>[新闻动态]</strong>
                 <p><a href="http://jbmjg.net/4/6">张拉整体结构</a></p>
-                <span>2017-04-11</span> </li>
+                <span>2018-01-15</span> </li>
             <li> <strong>[新闻动态]</strong>
                 <p><a href="http://jbmjg.net/4/7">膜结构车棚和景观棚的区</a></p>
-                <span>2017-04-11</span> </li>
+                <span>2018-01-15</span> </li>
             <li> <strong>[新闻动态]</strong>
                 <p><a href="http://jbmjg.net/4/8">独家定制膜结构车棚</a></p>
-                <span>2017-04-11</span> </li>
+                <span>2018-01-15</span> </li>
 
         </ul>
     </div>
