--- a/views/2/page2.html
+++ b/views/2/page2.html
@@ -156,7 +156,7 @@
 </div>
 <div class="clear"></div>
 <div class="foot">
-    <div class="foot_main">Copyright@2006-2017 北京娜美瑞膜结构技术有限公司 rights reserved 版权所有</div>
+    <div class="foot_main">Copyright@2017-2018 淄博景博膜结构工程有限公司 rights reserved 版权所有&nbsp;&nbsp;&nbsp; 鲁ICP备18019186号-1</div>
 </div>
 <script>
 
