修改链接地址

--- a/views/index.html
+++ b/views/index.html
@@ -109,7 +109,7 @@
     <p>携手高新技术，为您提升品质，节约成本</p>
 </div>
 <div class="news">
-    <div class="news_left"> <img src="/public/imgs/product/news.png"> <div class="news_left_new1"> <span><a href="http://jbmjg.net/4/20170411/25.html">选择张拉膜车棚注意事项</a></span>
+    <div class="news_left"> <img src="/public/imgs/product/news.png"> <div class="news_left_new1"> <span><a href="http://jbmjg.net/4/1">选择张拉膜车棚注意事项</a></span>
         <p>选择张拉膜车棚因该注意哪些事项？ 张拉膜车棚的设计主要包括体形设计、荷载分析和裁剪分析等四大问题。通过设计确定建筑形状尺寸、三维造型、净空体量并确定各控制点的坐标和...……</p>
     </div>
     </div>
