--- a/views/index.html
+++ b/views/index.html
@@ -75,7 +75,7 @@
         </div>
         <div class="kfmin_cen"><img src="/public/imgs/product/kefu.png"></div>
         <div class="kfmin_rig">
-            <div class="kfmin_rig_top"> 24小时咨询热线：<br>
+            <div class="kfmin_rig_top"> 24小时咨询热线：13869351802<br>
                 <strong>淄博景博膜结构工程有限公司</strong> </div>
             <div class="kfmin_rig_bot"><a href="http://jbmjg.net/6/">联系我们</a></div>
         </div>
