--- a/views/2/2.html
+++ b/views/2/2.html
@@ -45,7 +45,7 @@
     <div id="full-screen-slider">
         <ul id="slides">
             <li style="background: url('/public/imgs/1-1F4110Z345361.jpg') center top no-repeat; z-index: 800; display: block;">
-                <a href="http://localhost" target="_blank"></a></li>
+                <a href="http://jbmjg.net" target="_blank"></a></li>
 
         </ul>
         <ul id="pagination" style="margin-left: 445px;">
@@ -96,31 +96,31 @@
 
         <li><a href="javascript:void(0)"><img
                 src="/public/imgs/qccp/1-1FS01Q143628.png"></a><span><a
-                href="javascript:void(0)">交通设置膜结构</a></span></li>
+                href="javascript:void(0)">交通设施膜结构</a></span></li>
         <li><a href="javascript:void(0)"><img
                 src="/public/imgs/qccp/1-1FS01Q119559.png"></a><span><a
-                href="javascript:void(0)">交通设置膜结构</a></span></li>
+                href="javascript:void(0)">交通设施膜结构</a></span></li>
         <li><a href="javascript:void(0)"><img
                 src="/public/imgs/qccp/1-1FS01Q05DO.jpg"></a><span><a
-                href="javascript:void(0)">交通设置膜结构</a></span></li>
+                href="javascript:void(0)">交通设施膜结构</a></span></li>
         <li><a href="javascript:void(0)"><img
                 src="/public/imgs/qccp/1-1FS01Q0322X.jpg"></a><span><a
-                href="javascript:void(0)">交通设置膜结构</a></span></li>
+                href="javascript:void(0)">交通设施膜结构</a></span></li>
         <li><a href="javascript:void(0)"><img
                 src="/public/imgs/qccp/1-1FS01Q010260.jpg"></a><span><a
-                href="javascript:void(0)">交通设置膜结构</a></span></li>
+                href="javascript:void(0)">交通设施膜结构</a></span></li>
         <li><a href="javascript:void(0)"><img
                 src="/public/imgs/qccp/1-1FS01P94HU.jpg"></a><span><a
-                href="javascript:void(0)">交通设置膜结构</a></span></li>
+                href="javascript:void(0)">交通设施膜结构</a></span></li>
         <li><a href="javascript:void(0)"><img
                 src="/public/imgs/qccp/1-1FS01P922344.jpg"></a><span><a
-                href="javascript:void(0)">交通设置膜结构</a></span></li>
+                href="javascript:void(0)">交通设施膜结构</a></span></li>
         <li><a href="javascript:void(0)"><img
                 src="/public/imgs/qccp/1-1FS01PZ0Z0.jpg"></a><span><a
-                href="javascript:void(0)">交通设置膜结构</a></span></li>
+                href="javascript:void(0)">交通设施膜结构</a></span></li>
         <li><a href="javascript:void(0)"><img
-                src="/public/imgs/qccp/1-1FS01PK3339.jpg"></a><span><a
-                href="javascript:void(0)">交通设置膜结构</a></span></li>
+                src="/public/imgs/qccp/0420_15.jpg"></a><span><a
+                href="javascript:void(0)">交通设施膜结构</a></span></li>
         <li><a href="javascript:void(0)"><img
                 src="/public/imgs/qccp/1-1FPG3324TA.jpg"></a><span><a
                 href="javascript:void(0)">交通设施膜结构</a></span></li>
