--- a/views/2/page4.html
+++ b/views/2/page4.html
@@ -45,7 +45,7 @@
     <div id="full-screen-slider">
         <ul id="slides">
             <li style="background: url('/public/imgs/1-1F4110Z345361.jpg') center top no-repeat; z-index: 800; display: block;">
-                <a href="http://localhost" target="_blank"></a></li>
+                <a href="http://jbmjg.net" target="_blank"></a></li>
 
         </ul>
         <ul id="pagination" style="margin-left: 445px;">
@@ -96,9 +96,9 @@
 
         <li><a href="javascript:void(0)"><img
                 src="/public/imgs/upload/cpzs/page4/1-1FS01PZ0Z0.jpg"></a><span><a
-                href="javascript:void(0)">交通设置膜结构</a></span></li>
+                href="javascript:void(0)">交通设施膜结构</a></span></li>
         <li><a href="javascript:void(0)"><img src="/public/imgs/upload/cpzs/page4/1-1FS01PK3339.jpg"></a><span><a
-                href="javascript:void(0)">交通设置膜结构</a></span></li>
+                href="javascript:void(0)">交通设施膜结构</a></span></li>
         <li><a href="javascript:void(0)"><img
                 src="/public/imgs/upload/cpzs/page4/1-1FS0143634215.png"></a><span><a
                 href="javascript:void(0)">充电桩</a></span></li>
