--- a/views/3/page4.html
+++ b/views/3/page4.html
@@ -45,7 +45,7 @@
     <div id="full-screen-slider">
         <ul id="slides">
             <li style="background: url('/public/imgs/1-1F4110Z345361.jpg') center top no-repeat; z-index: 800; display: block;">
-                <a href="http://localhost" target="_blank"></a></li>
+                <a href="http://jbmjg.net" target="_blank"></a></li>
 
         </ul>
         <ul id="pagination" style="margin-left: 445px;">
