--- a/views/4.html
+++ b/views/4.html
@@ -134,7 +134,13 @@
     <div class="foot_main">Copyright@2017-2018 淄博景博膜结构工程有限公司 rights reserved 版权所有&nbsp;&nbsp;&nbsp; 鲁ICP备18019186号-1</div>
 </div>
 <script>
-
+    var _hmt = _hmt || [];
+    (function() {
+        var hm = document.createElement("script");
+        hm.src = "https://hm.baidu.com/hm.js?7ceb254f84aa9396ed69b849bbdc523e";
+        var s = document.getElementsByTagName("script")[0];
+        s.parentNode.insertBefore(hm, s);
+    })();
 </script>
 <!-- /footer -->
 
