--- a/views/2/2.html
+++ b/views/2/2.html
@@ -96,31 +96,31 @@
 
         <li><a href="javascript:void(0)"><img
                 src="/public/imgs/qccp/1-1FS01Q143628.png"></a><span><a
-                href="javascript:void(0)">交通设施膜结构</a></span></li>
+                href="javascript:void(0)">交通设置膜结构</a></span></li>
         <li><a href="javascript:void(0)"><img
                 src="/public/imgs/qccp/1-1FS01Q119559.png"></a><span><a
-                href="javascript:void(0)">交通设施膜结构</a></span></li>
+                href="javascript:void(0)">交通设置膜结构</a></span></li>
         <li><a href="javascript:void(0)"><img
                 src="/public/imgs/qccp/1-1FS01Q05DO.jpg"></a><span><a
-                href="javascript:void(0)">交通设施膜结构</a></span></li>
+                href="javascript:void(0)">交通设置膜结构</a></span></li>
         <li><a href="javascript:void(0)"><img
                 src="/public/imgs/qccp/1-1FS01Q0322X.jpg"></a><span><a
-                href="javascript:void(0)">交通设施膜结构</a></span></li>
+                href="javascript:void(0)">交通设置膜结构</a></span></li>
         <li><a href="javascript:void(0)"><img
                 src="/public/imgs/qccp/1-1FS01Q010260.jpg"></a><span><a
-                href="javascript:void(0)">交通设施膜结构</a></span></li>
+                href="javascript:void(0)">交通设置膜结构</a></span></li>
         <li><a href="javascript:void(0)"><img
                 src="/public/imgs/qccp/1-1FS01P94HU.jpg"></a><span><a
-                href="javascript:void(0)">交通设施膜结构</a></span></li>
+                href="javascript:void(0)">交通设置膜结构</a></span></li>
         <li><a href="javascript:void(0)"><img
                 src="/public/imgs/qccp/1-1FS01P922344.jpg"></a><span><a
-                href="javascript:void(0)">交通设施膜结构</a></span></li>
+                href="javascript:void(0)">交通设置膜结构</a></span></li>
         <li><a href="javascript:void(0)"><img
                 src="/public/imgs/qccp/1-1FS01PZ0Z0.jpg"></a><span><a
-                href="javascript:void(0)">交通设施膜结构</a></span></li>
+                href="javascript:void(0)">交通设置膜结构</a></span></li>
         <li><a href="javascript:void(0)"><img
-                src="/public/imgs/qccp/0420_15.jpg"></a><span><a
-                href="javascript:void(0)">交通设施膜结构</a></span></li>
+                src="/public/imgs/qccp/1-1FS01PK3339.jpg"></a><span><a
+                href="javascript:void(0)">交通设置膜结构</a></span></li>
         <li><a href="javascript:void(0)"><img
                 src="/public/imgs/qccp/1-1FPG3324TA.jpg"></a><span><a
                 href="javascript:void(0)">交通设施膜结构</a></span></li>
@@ -158,13 +158,6 @@
     </div>
 </div>
 <script>
-    var _hmt = _hmt || [];
-    (function() {
-        var hm = document.createElement("script");
-        hm.src = "https://hm.baidu.com/hm.js?7ceb254f84aa9396ed69b849bbdc523e";
-        var s = document.getElementsByTagName("script")[0];
-        s.parentNode.insertBefore(hm, s);
-    })();
     $('.n_right').viewer();
 </script>
 <!-- /footer -->
