--- a/views/2/page4.html
+++ b/views/2/page4.html
@@ -96,9 +96,9 @@
 
         <li><a href="javascript:void(0)"><img
                 src="/public/imgs/upload/cpzs/page4/1-1FS01PZ0Z0.jpg"></a><span><a
-                href="javascript:void(0)">交通设施膜结构</a></span></li>
+                href="javascript:void(0)">交通设置膜结构</a></span></li>
         <li><a href="javascript:void(0)"><img src="/public/imgs/upload/cpzs/page4/1-1FS01PK3339.jpg"></a><span><a
-                href="javascript:void(0)">交通设施膜结构</a></span></li>
+                href="javascript:void(0)">交通设置膜结构</a></span></li>
         <li><a href="javascript:void(0)"><img
                 src="/public/imgs/upload/cpzs/page4/1-1FS0143634215.png"></a><span><a
                 href="javascript:void(0)">充电桩</a></span></li>
@@ -157,13 +157,6 @@
     <div class="foot_main">Copyright@2017-2018 淄博景博膜结构工程有限公司 rights reserved 版权所有&nbsp;&nbsp;&nbsp; 鲁ICP备18019186号-1</div>
 </div>
 <script>
-    var _hmt = _hmt || [];
-    (function() {
-        var hm = document.createElement("script");
-        hm.src = "https://hm.baidu.com/hm.js?7ceb254f84aa9396ed69b849bbdc523e";
-        var s = document.getElementsByTagName("script")[0];
-        s.parentNode.insertBefore(hm, s);
-    })();
     $('.n_right').viewer();
 </script>
 <!-- /footer -->
