--- a/views/index.html
+++ b/views/index.html
@@ -75,7 +75,7 @@
         </div>
         <div class="kfmin_cen"><img src="/public/imgs/product/kefu.png"></div>
         <div class="kfmin_rig">
-            <div class="kfmin_rig_top"> 24小时咨询热线：13869351802<br>
+            <div class="kfmin_rig_top"> 24小时咨询热线：<br>
                 <strong>淄博景博膜结构工程有限公司</strong> </div>
             <div class="kfmin_rig_bot"><a href="http://jbmjg.net/6/">联系我们</a></div>
         </div>
@@ -109,7 +109,7 @@
     <p>携手高新技术，为您提升品质，节约成本</p>
 </div>
 <div class="news">
-    <div class="news_left"> <img src="/public/imgs/product/news.png"> <div class="news_left_new1"> <span><a href="http://jbmjg.net/4/1">选择张拉膜车棚注意事项</a></span>
+    <div class="news_left"> <img src="/public/imgs/product/news.png"> <div class="news_left_new1"> <span><a href="http://jbmjg.net/4/20170411/25.html">选择张拉膜车棚注意事项</a></span>
         <p>选择张拉膜车棚因该注意哪些事项？ 张拉膜车棚的设计主要包括体形设计、荷载分析和裁剪分析等四大问题。通过设计确定建筑形状尺寸、三维造型、净空体量并确定各控制点的坐标和...……</p>
     </div>
     </div>
@@ -148,13 +148,6 @@
     <div class="foot_main">Copyright@2017-2018 淄博景博膜结构工程有限公司 rights reserved 版权所有&nbsp;&nbsp;&nbsp; 鲁ICP备18019186号-1</div>
 </div>
 <script>
-    var _hmt = _hmt || [];
-    (function() {
-        var hm = document.createElement("script");
-        hm.src = "https://hm.baidu.com/hm.js?7ceb254f84aa9396ed69b849bbdc523e";
-        var s = document.getElementsByTagName("script")[0];
-        s.parentNode.insertBefore(hm, s);
-    })();
     $('.cpzs ul').viewer()
 </script>
 <!-- /footer -->
